@@ -1,5 +1,10 @@
 2008-06-17  Vincent Untz  <vuntz@gnome.org>
 
+	* libpanel-util/panel-power-manager.h:
+	* libpanel-util/panel-session-manager.[ch]: fix distcheck.Again.
+
+2008-06-17  Vincent Untz  <vuntz@gnome.org>
+
 	* libpanel-util/panel-power-manager.c: fix distcheck
 
 2008-06-06  Rodney Dawes  <dobey@gnome.org>
